[project]
name = "code_review"
version = "0.1.0"
description = "Code_Review using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
code_review = "code_review.main:run"
run_crew = "code_review.main:run"
train = "code_review.main:train"
replay = "code_review.main:replay"
test = "code_review.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
